Bugfix: memperbaiki z-index nav agar paling atas

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ nav {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     position: sticky;
     top: 0;
+	z-index: 9999;
 }
 
 #nav-left {
